--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript-eslint": "^8.39.0"
   },
   "dependencies": {
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "fs": "^0.0.1-security",
