--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,2 @@
 API_KEY=X
-MONGO_DB_KEY=Exemplo de chave
+MONGO_DB_KEY=mongodb+srv://joaoreis:123@cluster0.oc26dee.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
