--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,4 @@
 API_KEY=X
-MONGO_DB_KEY=mongodb+srv://joaoreis:<SuaSenha>@cluster0.oc26dee.mongodb.net/
+MONGO_DB_KEY=
 DATABASE=tsmongo
 DB_OPTIONS=retryWrites=true&w=majority&appName=Cluster0
